--- a/styles/aboutMe.css
+++ b/styles/aboutMe.css
@@ -1,1 +1,86 @@
-/*# sourceMappingURL=aboutMe.css.map */
+@font-face {
+  font-family: vazir;
+  src: url(../assets/fonts/vazir/Vazir.ttf) format("truetype");
+  src: url(../assets/fonts/vazir/Vazir.woff) format("woff");
+}
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style-type: none;
+  box-sizing: border-box;
+  border: 0;
+  outline: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: vazir;
+  background-color: #ddd;
+}
+
+.container {
+  max-width: 1366px;
+  margin: 0 auto;
+}
+
+header section div .siteURL ul {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  background-color: #fff;
+}
+header section div .siteURL ul li a {
+  color: #153ef1;
+}
+
+main section {
+  margin: 20px 0;
+}
+main section .container .mySkils {
+  padding: 20px;
+  background-color: #fff;
+  text-align: center;
+}
+
+footer {
+  margin: 30px 0;
+}
+footer section {
+  background-color: #fff;
+}
+footer section .aboutUs {
+  padding: 20px 30px;
+  gap: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+footer section .aboutUs .contactUs {
+  width: -moz-max-content;
+  width: max-content;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+footer section .otherSites ul li a {
+  color: #000;
+  opacity: 0.7;
+  transition: all 0.3s;
+}
+footer section .otherSites ul li a:hover {
+  opacity: 1;
+}
+
+@media screen and (min-width: 992px) {
+  footer section .aboutUs {
+    flex-direction: row;
+  }
+}/*# sourceMappingURL=aboutMe.css.map */
